--- a/templates/Analysis.html
+++ b/templates/Analysis.html
@@ -106,11 +106,12 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
+
+        <nav class="secondnav">
+            <label class="log" href="#"> CHARTS</label>
+        </nav>
     </nav>
-    <nav class="secondnav">
-        <label class="log" href="#"> ANALYSIS</label>
-    </nav>
-    <form style="margin-left:190px; margin-top:120px;">
+    <form style="margin-left:220px; margin-top:150px;">
         <label for="state">State:</label>
         <select id="state" name="state">
         <option value="ANDHRA PRADESH">ANDHRA PRADESH</option>
