--- a/templates/Analysis2.html
+++ b/templates/Analysis2.html
@@ -278,12 +278,12 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
-    </nav>
-    <nav class="secondnav">
-        <label class="log" href="#"> ANALYSIS 1</label>
-    </nav>
 
-    <div style="margin-left:200px; margin-top:150px;" for="state_input">
+        <nav class="secondnav">
+            <label class="log" href="#"> GRAPHS</label>
+        </nav>
+    </nav>
+    <div style="margin-left:200px; margin-top:100px;" for="state_input">
         <label>State:</label>
         <select id="state_input" name="state_input">
         <option value="disabled selected">Select State</option>
@@ -302,7 +302,6 @@
         <div style="margin-left: 20px; margin-top: 40px;"><button class="button" onclick="changeGBar('state_input')">Grouped Bar Chart</button></div>
 
     </div>
-    <p style="margin-top:50px; position:absolute; margin-left:1200px;"> And a datset here</p>
     <div class="box" style="margin-left:220px;">
         <div class="tab-pane fade show active" id="v-pills-area-chart" role="tabpanel" aria-labelledby="v-pills-area-chart-tab">
 
