--- a/templates/datadisplay.html
+++ b/templates/datadisplay.html
@@ -23,9 +23,8 @@
     <nav class="main">
         <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
         <ul>
-            <li>
-                <a href="{{url_for('index')}}"></a>Home</a>
-            </li>
+
+            <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
@@ -51,8 +50,10 @@
         </div>
     </div>
 
-
-
+    <footer>
+        <p> Copyright &copy; 2023. All rights reserved.</p>
+    </footer>
+</body>
 
 
 </html>
