--- a/templates/time-series-forcasting.html
+++ b/templates/time-series-forcasting.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale">
     <title>TIME SERIES FORECASTING</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/style.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/graphanalysis.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename='stylesheets/K-means.css')}}">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="{{url_for('static',filename='javascript/linearregression.js')}}"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
-    <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script>
-    <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="{{url_for( 'static',filename='stylesheets/style.css' )}} ">
+    <link rel="stylesheet " href="{{url_for( 'static',filename='stylesheets/graphanalysis.css' )}} ">
+    <link rel="stylesheet " href="{{url_for( 'static',filename='stylesheets/K-means.css' )}} ">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js "></script>
+    <script src="{{url_for( 'static',filename='javascript/linearregression.js' )}} "></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js " type="text/javascript "></script>
+    <script src="http://www.skulpt.org/js/skulpt.min.js " type="text/javascript "></script>
+    <script src="http://www.skulpt.org/js/skulpt-stdlib.js " type="text/javascript "></script>
 
 
 
@@ -25,11 +25,11 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 
-    <script src="https://kit.fontawesome.com/7bdcd846e8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7bdcd846e8.js " crossorigin="anonymous "></script>
 
 
 
-    <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
+    <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js "></script>
 
 
 </head>
@@ -38,9 +38,9 @@
 
 
 
-<body onload="tablefilling(1);">
-    <nav class="main" style="width: 100%;">
-        <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}"></label>">Crime Hotspots Prediction & Analysis</label>
+<body onload="tablefilling(1); ">
+    <nav class="main " style="width: 100%; ">
+        <label style="margin-left:0px;" class="logo" href="{{url_for( 'index')}} ">Crime Hotspots Prediction & Analysis</label>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -56,13 +56,39 @@
         <a style=" color:#222222; text-decoration: none; " href="#sectionId">Jump To Prediction</a>
     </div>
 
-    <div class="info-area" style="margin-top:30px;">
+    <div style="margin-left:12%; width: 70%; margin-right:12%; margin-bottom:30px; ">
+
+        <div style=" margin-top: 30px; margin-left: 20px; border-radius:10px; text-align:center; text-decoration: none; background-color:#bbbb; padding:4px;">
+            <a href="{{url_for('datadisp')}}">CLICK HERE TO VIEW THE DATA SET</a>
+        </div>
+
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+            Timeseries forecasting in simple words means to forecast or to predict the future value(eg-stock price) over a period of time.</p>
+        </div>
+
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px;">
+            <p><b>There are some key concepts associated with time series forecasting :</b></p>
+            <br>
+            <br>
+            <li><b>Seasonality:</b> In simple terms, Seasonality means repetition over time. For example, while predicting electricity bills will be higher every year in the summer season.
+            </li>
+            <br>
+            <li style="text-align: left;"><b>Trend :</b> It tells increasing or decreasing trends over time in the data.</li>
+
+        </div>
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+            Fb Prophet library was launched by Facebook now meta, and it was built for time series analysis. It can automatically manage parameters related to seasonality and data stationarity.</p>
+        </div>
+
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+            Here we are using fbprophet library to predict crime rate of India for the next 5 years : 2022, 2023, 2024, 2025 & 2026.
+        </div>
+        <div style="margin-top: 30px; margin-left: 20px; border-radius:10px; width:auto; text-align:center; background-color:#bbbb; padding:4px; ">
+            Accuracy = 88.85251460155811%
+            </p>
+        </div>
 
 
-
-        <img src="{{url_for('static',filename='images/kmeans_elb.png')}}" style=" border-radius:10px;border: 1px solid black; ">
-        <img src="{{url_for('static',filename='images/kmeans_clusters.png')}}" style=" border-radius:10px; height: 200px; width:300px;border: 1px solid black;">
-    </div>
     </div>
     <div style="clear:both;">
     </div>
@@ -74,21 +100,18 @@
         <div>
             <p style="margin-left:10%; margin-top: 2%; height: 30px; "><b>FORE-CAST:</b></p>
             <div class="box" style="overflow:hidden; width: 900px; margin:auto; margin-top :30px;">
-                <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="prediction/forecast.html"></iframe>
+                <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="url_for('/prediction/forecast_cmp_total_ipc.html')">
             </div>
             <p style="margin-left:10%; margin-top: 7%; height: 30px; "><b>FORE-CAST CMP:</b></p>
             <div class="box" style="overflow:hidden; width: 900px; margin:auto; margin-top :30px;">
                 <iframe class="iframe1" style=" overflow:hidden; height: 100%; width: 100%;" src="prediction/forecast_cmp.html"></iframe>
+                </section>
+
             </div>
-        </div>
-    </div>
-    </section>
+            <footer style="margin-top:13%">
+                <p> Copyright &copy; 2023. All rights reserved.</p>
 
-    </div>
-    <footer style="margin-top:13%">
-        <p> Copyright &copy; 2023. All rights reserved.</p>
-
-    </footer>
+            </footer>
 
 </body>
 
