--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
             <div class="flex flex-wrap">
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Clustering</h2>
-                    <p class="leading-relaxed text-base mb-4">Predict the crime rates using the latest criminal data</p>
+                    <p class="leading-relaxed text-base mb-4">Clustering Analysis and Prediction using different Algorithms.</p>
                     <div class="drop-down">
                         <button class=button><a class="text-blue-500 inline-flex items-center">Try Now
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Classification</h2>
-                    <p class="leading-relaxed text-base mb-4">Classification of criminal data using various models.</p>
+                    <p class="leading-relaxed text-base mb-4">Classification of Districts into different crime intensity regions.</p>
                     <div class="drop-down">
                         <button class=button><a class="text-blue-500 inline-flex items-center">Try Now
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Linear Regression</h2>
-                    <p class="leading-relaxed text-base mb-4">using Linear Regression for Prediction</p>
+                    <p class="leading-relaxed text-base mb-4">Crime Rate Prediction based on Socio-Economic factors using MLR.</p>
                     <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('LinearReg')}}">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Time-series Forcasting</h2>
-                    <p class="leading-relaxed text-base mb-4">Use of time-series data for prediction and visualization</p>
+                    <p class="leading-relaxed text-base mb-4">Using Time Series Forecasting(fbprohet) for Crime Prediction.</p>
                     <div class="drop-down">
                         <button class=button><a class="text-blue-500 inline-flex items-center">Try Now  
                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Analysis</h2>
-                    <p class="leading-relaxed text-base mb-4">Using Charts, heatmaps and plots for analysis of criminal dataset.</p>
+                    <p class="leading-relaxed text-base mb-4">Using Visualizations (Google Charts and Plotly) for Analysis of Crime Data.</p>
                     <div class="drop-down"> <button class=button><a class="text-blue-500 inline-flex items-center">Try Now
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -116,7 +116,7 @@
 
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Data</h2>
-                    <p class="leading-relaxed text-base mb-4">Check out the multiple datasets that were used for in this project</p>
+                    <p class="leading-relaxed text-base mb-4">Check out the multiple crime datasets that were used in this project.</p>
                     <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('datadisp')}}">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
@@ -127,7 +127,7 @@
 
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Geo-Spatial Analysis</h2>
-                    <p class="leading-relaxed text-base mb-4">Identify your location's threat levels by using your adress' pincode.</p>
+                    <p class="leading-relaxed text-base mb-4">Using Choropleth to Visualize Crime Data on Geographical Locations.</p>
                     <div class="drop-down"> <button class=button><a class="text-blue-500 inline-flex items-center">Try Now  
                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
@@ -143,7 +143,7 @@
 
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Crime Feed</h2>
-                    <p class="leading-relaxed text-base mb-4">Stay Updated with the latest news with the help of the live crime feed.</p>
+                    <p class="leading-relaxed text-base mb-4">Latest News Headlines and Webscrapped Data Plotted on Heatmap.</p>
                     <button class=button><a href="{{url_for('crimefeed')}}" class="text-blue-500 inline-flex items-center">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
