--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Linear Regression</h2>
                     <p class="leading-relaxed text-base mb-4">Crime Rate Prediction based on Socio-Economic factors using MLR.</p>
-                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('LinearReg')}}">Try Now  
+                    <a href="{{url_for('LinearReg')}}"><button class="button" class="text-blue-500 inline-flex items-center">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
@@ -117,7 +117,7 @@
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Data</h2>
                     <p class="leading-relaxed text-base mb-4">Check out the multiple crime datasets that were used in this project.</p>
-                    <button class=button><a class="text-blue-500 inline-flex items-center" href="{{url_for('datadisp')}}">Try Now  
+                    <a href="{{url_for('datadisp')}}"><button class=button class="text-blue-500 inline-flex items-center" >Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
@@ -144,11 +144,11 @@
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Crime Feed</h2>
                     <p class="leading-relaxed text-base mb-4">Latest News Headlines and Webscrapped Data Plotted on Heatmap.</p>
-                    <button class=button><a href="{{url_for('crimefeed')}}" class="text-blue-500 inline-flex items-center">Try Now  
+                    <a href="{{url_for('crimefeed')}}"> <button class=button class="text-blue-500 inline-flex items-center">Try Now  
                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
-                    </svg>
+                        </svg>
                     </a>
                 </div>
 
