--- a/templates/Analysis.html
+++ b/templates/Analysis.html
@@ -99,7 +99,7 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -167,8 +167,8 @@
     </form>
     <button style="position:absolute; margin-top:150px; float:left; margin-left:50px;" class="button" onclick="drawChart1()">BAR CHART</button>
     <button style="position:absolute; margin-top:230px; float:left; margin-left:50px;" class="button" onclick="drawChart2()">LINE CHART</button>
-    <div class="box" style="margin-left: 250px;">
-        <div id="chart_div" style="width: 900px; margin-top: 40px; margin-left: 30px; height: 550px;"></div>
+    <div class="box" style="margin-left: 250px; overflow: hidden;">
+        <div id="chart_div" style="width: 100%; margin-top:20px; height: 95%"></div>
     </div>
 
     <footer>
