--- a/templates/Analysis3(maps).html
+++ b/templates/Analysis3(maps).html
@@ -202,7 +202,7 @@
 
 <body>
     <nav class="main">
-        <label class="logo" href="{{url_for('index')}}" style="margin-left:0;">Crime Hotspots Prediction & Analysis</label>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
         <ul>
             <li><a href="{{url_for('index')}}">Home</a></li>
             <li><a href="#">About</a></li>
@@ -249,7 +249,7 @@
             <button class="button" style="margin-left:30px;" onclick="changeChoropleth('year_input','crime_input')">Submit</button></div>
 
 
-        <div class="box" style="margin-left:120px;">
+        <div class="box" style="margin-left:120px; overflow: hidden;">
             <div class="tab-pane fade show active" id="v-pills-area-chart" role="tabpanel" aria-labelledby="v-pills-area-chart-tab">
 
                 <iframe style="margin-top: 2px; align-self: center; margin-bottom: 5px; border-radius: 25px;" src="plots/Choropleth/2021/2021_Murders.html" frameborder="0" width="1200" height="600" id="iframeID3"></iframe>
