--- a/templates/datadisplay.html
+++ b/templates/datadisplay.html
@@ -19,9 +19,9 @@
 
 </head>
 
-<body>
+<body onload="linearr()">
     <nav class="main">
-        <label style="margin-left:0px;" class="logo" href="{{url_for('index')}}">Crime Hotspots Prediction & Analysis</label>
+        <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
         <ul>
 
             <li><a href="{{url_for('index')}}">Home</a></li>
