--- a/templates/K-Means.html
+++ b/templates/K-Means.html
@@ -41,7 +41,7 @@
 
 
 
-<body onload="tablefilling(1);">
+<body>
     <nav class="main" style="width: 100%;">
         <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">Crime Hotspots Prediction & Analysis</label></a>
         <ul>
