--- a/templates/datadisplay.html
+++ b/templates/datadisplay.html
@@ -18,6 +18,11 @@
 
 
 </head>
+<style>
+    .button {
+        margin-bottom: 20px;
+    }
+</style>
 
 <body onload="linearr()">
     <nav class="main">
@@ -31,7 +36,7 @@
         </ul>
     </nav>
 
-    <div class="toggle-button" style="margin-top:100px; display: inline-block;">
+    <div class="toggle-button" style="margin-top:100px; display: inline-block; margin-bttom:30px;">
         <button class="button" onclick="kmeans()">K-Means</button>
         <button class="button" onclick="linearr()">Linear Regression</button>
         <button class="button" onclick="classification()">Classification</button>
